<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/text_area"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/shape_text"
        android:text=""
        android:singleLine="true"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:textColor="@color/white"
        android:gravity="right|bottom"
        android:textSize="50sp"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:rowCount="5"
        android:columnCount="4"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/menu"        />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/left_bracket"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/right_bracket"/>

        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/modulus"/>

        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_7"/>

        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_8"/>

        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_9"/>

        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/multiplication"/>

        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_4"/>

        <Button
            android:id="@+id/btn_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_5"/>

        <Button
            android:id="@+id/btn_11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_6"/>

        <Button
            android:id="@+id/btn_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/sub"/>

        <Button
            android:id="@+id/btn_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_1"/>

        <Button
            android:id="@+id/btn_14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_2"/>

        <Button
            android:id="@+id/btn_15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_3"/>

        <Button
            android:id="@+id/btn_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/sum"/>

        <Button
            android:id="@+id/btn_17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/number_0"/>

        <Button
            android:id="@+id/btn_18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/dot"/>

        <Button
            android:id="@+id/btn_19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/erase"/>

        <Button
            android:id="@+id/btn_20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:layout_rowWeight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/equals"/>

    </GridLayout>
</LinearLayout>